--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 
       <!-- YOUR CONTENT GOES HERE: -->
 
+      <h1>Ready to learn Bootstrap?</h1>
 
+      <h4>Everything you see here lives inside a div with class 'container-fluid'.</h4>
 
+      <p>You can use the grid system to layout our content, put a jumbotron on your home page, display a data table, and more.</p>
 
-
+      <p>See the snippets folder for examples.</p>
 
       <!-- YOUR CONTENT STOPS HERE -->
 
