--- a/snippets/grid_layout.html
+++ b/snippets/grid_layout.html
@@ -16,6 +16,10 @@
         padding-top: 10px;
         padding-bottom: 10px;
       }
+      .explanation {
+        margin-bottom: 24px;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -27,6 +31,13 @@
       </p>
       <hr>
 
+      <div class="row explanation">
+        <div class="col-md-12">
+          <h3>The bootstrap grid system uses a 12-column grid.</h3>
+          <p>Use the <code>row</code> and <code>col...</code> classes
+          to describe how you want to layout your content.</p>
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-8">This column uses width ".col-md-8"</div>
         <div class="col-md-4">This column uses width ".col-md-4"</div>
