--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
 
       <h1>Ready to learn Bootstrap?</h1>
 
-      <h4>Everything you see here lives inside a div with class 'container-fluid'.</h4>
+      <h4>Use the <code>start_here.html</code> file as your starting point for every page.</h4>
 
-      <p>You can use the grid system to layout our content, put a jumbotron on your home page, display a data table, and more.</p>
+      <p>Then, check out the <code>snippets</code> folder for a few examples of how to add components to your page.</p>
 
-      <p>See the snippets folder for examples.</p>
+      <p>Here are links to more resources:</p>
+
+      <ul>
+        <li><a href="http://getbootstrap.com">Official Bootstrap Documentation</a></li>
+        <li><a href="http://fontawesome.io/">FontAwesome</a></li>
+        <li><a href="http://bootswatch.com/">Bootswatch</a></li>
+      </ul>
 
       <!-- YOUR CONTENT STOPS HERE -->
 
