--- a/index.html
+++ b/index.html
@@ -16,13 +16,31 @@
 
       <!-- YOUR CONTENT GOES HERE: -->
 
-      <h1>Ready to learn Bootstrap?</h1>
+      <div class="page-header">
+        <h1>Ready to learn Bootstrap?
+          <small>We've got some legos for you.</small>
+        </h1>
+      </div>
 
-      <h4>Use the <code>start_here.html</code> file as your starting point for every page.</h4>
+      <h4>Make a copy of the <code>start_here.html</code> file as your starting point for every page.</h4>
 
-      <p>Then, check out the <code>snippets</code> folder for a few examples of how to add components to your page.</p>
+      <p>You can look at the <code>snippets</code> folder for a few examples of how to add components to your page.</p>
 
-      <p>Here are links to more resources:</p>
+      <ul>
+        <li><a href="snippets/images.html">Images</a></li>
+        <li><a href="snippets/alerts.html">Alert Boxes</a></li>
+        <li><a href="snippets/buttons.html">Buttons</a></li>
+        <li><a href="snippets/colors.html">Colors</a></li>
+        <li><a href="snippets/form.html">Form</a></li>
+        <li><a href="snippets/jumbotron.html">Jumbotron</a></li>
+        <li><a href="snippets/navbar.html">Navigation Bar</a></li>
+        <li><a href="snippets/page_header.html">Page Header</a></li>
+        <li><a href="snippets/table.html">Data Table</a></li>
+        <li><a href="snippets/tabs.html">Tabs</a></li>
+        <li><a href="snippets/wells.html">Wells</a></li>
+      </ul>
+
+      <h4>Ready to learn more?</h4>
 
       <ul>
         <li><a href="http://getbootstrap.com">Official Bootstrap Documentation</a></li>
