--- a/snippets/form.html
+++ b/snippets/form.html
@@ -40,7 +40,7 @@
             <input type="checkbox"> Check me out
           </label>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
 
