--- a/snippets/alerts.html
+++ b/snippets/alerts.html
@@ -17,6 +17,8 @@
       <p>Here are some alert boxes. The top one has a clickable dismiss box.
       <a href="http://http://getbootstrap.com/components/#alerts">See the full documentation.</a></p>
 
+      <!-- YOUR CONTENT GOES HERE: -->
+
       <div class="row">
         <div class="col-md-6">
           <div class="alert alert-success alert-dismissible" role="alert">
@@ -30,6 +32,8 @@
           <div class="alert alert-danger" role="alert">...</div>
         </div>
       </div>
+
+       <!-- YOUR CONTENT STOPS HERE -->
     </div>
 
     <!-- jQuery and Bootstrap Javascript, needed for some of the interactive effects -->
