--- a/snippets/form.html
+++ b/snippets/form.html
@@ -19,6 +19,8 @@
       </p>
       <hr>
 
+      <!-- YOUR CONTENT GOES HERE: -->
+
       <!-- Control the overall width of your form by using a col-md-* class -->
 
       <form role="form" class="col-md-5">
@@ -42,6 +44,8 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+
+      <!-- YOUR CONTENT STOPS HERE -->
     </div>
 
     <!-- jQuery and Bootstrap Javascript, needed for some of the interactive effects -->
