--- a/snippets/grid_layout.html
+++ b/snippets/grid_layout.html
@@ -38,6 +38,8 @@
           to describe how you want to layout your content.</p>
         </div>
       </div>
+
+      <!-- YOUR CONTENT GOES HERE: -->
       <div class="row">
         <div class="col-md-8">This column uses width ".col-md-8"</div>
         <div class="col-md-4">This column uses width ".col-md-4"</div>
@@ -51,6 +53,7 @@
         <div class="col-md-6">This column uses width ".col-md-6"</div>
         <div class="col-md-6">This column uses width ".col-md-6"</div>
       </div>
+      <!-- YOUR CONTENT STOPS HERE -->
     </div>
 
     <!-- jQuery and Bootstrap Javascript, needed for some of the interactive effects -->
