--- a/snippets/page_header.html
+++ b/snippets/page_header.html
@@ -14,9 +14,11 @@
 
     <div class="container-fluid">
 
+      <!-- YOUR CONTENT GOES HERE: -->
       <div class="page-header">
         <h1>Example page header <small>Subtext for header</small></h1>
       </div>
+      <!-- YOUR CONTENT STOPS HERE -->
 
     </div>
 
