--- a/snippets/table.html
+++ b/snippets/table.html
@@ -19,6 +19,7 @@
       </p>
       <hr>
 
+      <!-- YOUR CONTENT GOES HERE: -->
       <h4>Standard table.</h4>
       <table class="table">
         <thead>
@@ -135,6 +136,9 @@
           </tr>
         </tbody>
       </table>
+
+      <!-- YOUR CONTENT STOPS HERE -->
+
     </div>
 
     <!-- jQuery and Bootstrap Javascript, needed for some of the interactive effects -->
