--- a/snippets/tabs.html
+++ b/snippets/tabs.html
@@ -21,6 +21,8 @@
       </p>
       <hr>
 
+      <!-- YOUR CONTENT GOES HERE: -->
+
       <!-- Nav tabs -->
       <ul class="nav nav-tabs" role="tablist">
         <li class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
