--- a/snippets/wells.html
+++ b/snippets/wells.html
@@ -17,10 +17,14 @@
       <p><a href="http://http://getbootstrap.com/components/#wells">See the full
       documentation.</a></p>
 
-      <div class="well">
-      <h3>This content is inside of a well.</h3>
+      <!-- YOUR CONTENT GOES HERE: -->
 
+      <div class="well">
+        <h3>This content is inside of a well.</h3>
       </div>
+
+      <!-- YOUR CONTENT STOPS HERE -->
+
     </div>
 
     <!-- jQuery and Bootstrap Javascript, needed for some of the interactive effects -->
