--- a/snippets/jumbotron.html
+++ b/snippets/jumbotron.html
@@ -14,15 +14,18 @@
 
     <div class="container-fluid">
 
-    <p>This is a jumbotron.
-      <a href="http://http://getbootstrap.com/components/#jumbotron">See the full documentation.</a></p>
+      <p>
+        This is a jumbotron.
+        <a href="http://http://getbootstrap.com/components/#jumbotron">See the full documentation.</a>
+      </p>
 
-
+      <!-- YOUR CONTENT GOES HERE: -->
       <div class="jumbotron">
         <h1>Hello, world!</h1>
         <p>...</p>
         <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
       </div>
+      <!-- YOUR CONTENT STOPS HERE -->
 
     </div>
 
