--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="snippets/alerts.html">Alert Boxes</a></li>
         <li><a href="snippets/buttons.html">Buttons</a></li>
         <li><a href="snippets/colors.html">Colors</a></li>
+        <li><a href="snippets/panels.html">Panels</a></li>
         <li><a href="snippets/form.html">Form</a></li>
         <li><a href="snippets/jumbotron.html">Jumbotron</a></li>
         <li><a href="snippets/navbar.html">Navigation Bar</a></li>
@@ -46,6 +47,7 @@
         <li><a href="http://getbootstrap.com">Official Bootstrap Documentation</a></li>
         <li><a href="http://fontawesome.io/">FontAwesome</a></li>
         <li><a href="http://bootswatch.com/">Bootswatch</a></li>
+        <li><a href="example/landing.html">Example landing page</a></li>
       </ul>
 
       <!-- YOUR CONTENT STOPS HERE -->
